--- a/package.json
+++ b/package.json
@@ -17,5 +17,16 @@
   "bugs": {
     "url": "https://github.com/kimey-robertson/zombilicious/issues"
   },
-  "homepage": "https://github.com/kimey-robertson/zombilicious#readme"
+  "homepage": "https://github.com/kimey-robertson/zombilicious#readme",
+  "dependencies": {
+    "express": "^5.1.0",
+    "socket.io": "^4.8.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.0.8",
+    "@types/socket.io": "^3.0.1"
+  }
 }
